force-app/main/default/objects/Student__c/fields/Marks_percent__c.field-meta.xml
<CustomField>
    <fullName>Marks_percent__c</fullName>
    <label>Marks percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>