force-app/main/default/objects/Student__c/fields/Stu_Fee__c.field-meta.xml
<CustomField>
    <fullName>Stu_Fee__c</fullName>
    <label>Stu Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>