force-app/main/default/objects/Student__c/fields/StuLang__c.field-meta.xml
<CustomField>
    <fullName>StuLang__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StuLang</label>
    <referenceTo>StuLang__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>