force-app/main/default/objects/Student__c/fields/Teacherss__c.field-meta.xml
<CustomField>
    <fullName>Teacherss__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>Teacher__c</referenceTo>
    <relationshipLabel>Students (Teacher)</relationshipLabel>
    <relationshipName>Students1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>